--- a/login/index.html
+++ b/login/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
   <div class="login-container">
@@ -13,11 +14,11 @@
       <p>Login to your account</p>
       <form action="#">
         <div class="input-group">
-          <label for="email">Email</label>
+          <i class="fa fa-envelope icon"></i>
           <input type="email" id="email" placeholder="Enter your email" required>
         </div>
         <div class="input-group">
-          <label for="password">Password</label>
+          <i class="fa fa-lock icon"></i>
           <input type="password" id="password" placeholder="Enter your password" required>
         </div>
         <div class="options">
@@ -31,8 +32,8 @@
       <div class="social-login">
         <p>Or login with</p>
         <div class="social-icons">
-          <button class="google-btn">Google</button>
-          <button class="facebook-btn">Facebook</button>
+          <button class="google-btn"><i class="fab fa-google"></i> Google</button>
+          <button class="facebook-btn"><i class="fab fa-facebook-f"></i> Facebook</button>
         </div>
       </div>
       <p class="register-text">Don't have an account? <a href="#">Register now</a></p>
