feat: new code page blog

--- a/e-commerce/shop/index.html
+++ b/e-commerce/shop/index.html
@@ -3,13 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title>Shop</title>
   <link rel="stylesheet" href="../styles/global.css">
-  <link rel="stylesheet" href="../styles/header.css">
-  <link rel="stylesheet" href="../styles/footer.css">
-  <link rel="stylesheet" href="../styles/shop.css">
-  <link rel="stylesheet" href="../styles/product.css">
-  <link rel="stylesheet" href="../styles/home.css">
 
 
 
@@ -22,9 +17,9 @@
         <a href="#"><img src="../images/logo.png" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
-                <li><a href="index.html">Home</a></li>
-                <li><a class="active" href="shop.html">Shop</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="../home/index.html">Home</a></li>
+                <li><a class="active" href="./index.html">Shop</a></li>
+                <li><a href="../blogs/index.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li id="lg-bag"><a href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
@@ -368,6 +363,6 @@
             <p>Created By Muhammad Awais | All Rights Reserved | &#169; 2023</p>
         </div>
     </footer>
-  <script src="script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
