--- a/e-commerce/home/index.html
+++ b/e-commerce/home/index.html
@@ -5,13 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" href="../styles/global.css">
-  <link rel="stylesheet" href="../styles/header.css">
-  <link rel="stylesheet" href="../styles/home.css">
-  <link rel="stylesheet" href="../styles/footer.css">
-  <link rel="stylesheet" href="../styles/product.css">
-  <link rel="stylesheet" href="../styles/cart.css">
-  <link rel="stylesheet" href="../styles/about.css">
-  <link rel="stylesheet" href="../styles/contact.css">
+
 
     <!-- font-awesome cdn link -->
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
@@ -436,6 +430,7 @@
             <p>Created By Nguyen Tien Tai | All Rights Reserved | &#169; 2023</p>
         </div>
     </footer>
-  <script src="script.js"></script>
+    <script src="../js/script.js"></script>
+
 </body>
 </html>
